Lots more updates

--- a/index.html
+++ b/index.html
@@ -1,54 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Boston Blue Bikes Map</title>
+    <title>{{prettyName}} BikeShare Density</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="../static/style.css">
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
- 
+
   </head>
   <body>
     <nav>
         {{nav}}
     </nav>
 
-    <div id = 'landing'>
-
-      <div id="map"></div>
-      <div id = 'system-data'>
-        <div class = 'stat-box'>
-          <div class = 'stat'>{{prettyName}}</div>
-          <div class = 'stat-name'>{{bikeShareName}}</div>
-        </div>
-        <div class = 'stat-box'>
-          <div class = 'stat'>{{totalBikesAvailable}}</div>
-          <div class = 'stat-name'>Bikes Available</div>
-        </div>
-        <div class = 'stat-box'>
-          <div class = 'stat'>{{totalDocksAvailable}}</div>
-          <div class = 'stat-name'>Docks Available</div>
-        </div>
-        <div class = 'stat-box'>
-          <div class = 'stat'>{{Stations}}</div>
-          <div class = 'stat-name'>Stations</div>
-        </div>
-      </div>
-    </div>
-        <button onclick="changeRadius()">Change radius</button>
-    <div id = heatmapBikes>
-    </div>
-     <div id = heatmapDocks>
-    </div>
-    <div id = heatmapStations>
-    </div>
-    <h1 class='subtitle'>Station Levels</h1>
-    <div class = "station-table-div">{{station-table}}</div>
-    <script src="../static/stations.json"></script>
-    <script src="../static/map.js"></script>
-
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7hJDl_5R7a2JFZZvgMKRJs6_fqcMLyYs&callback=initMap&libraries=visualization"
-    async defer></script>
+    {{body}}
 
   </body>
 </html>
